[package]
name = "aprs-tap"
version = "0.1.0"
edition = "2024"

[features]
server = [
    "dep:axum",
    "dep:serde",
    "dep:tokio",
    "dep:sea-orm",
    "dep:sea-orm-migration",
    "dep:argon2",
    "dep:jsonwebtoken",
    "dep:rand",
    "dep:uuid",
    "dep:dotenvy",
    "dep:utoipa",
    "dep:utoipa-swagger-ui",
]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
colored = "2"
chrono = "0.4"
axum = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
sea-orm = { version = "1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio", "with-chrono", "macros"], optional = true }
sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio"], optional = true }
argon2 = { version = "0.5", optional = true }
jsonwebtoken = { version = "9", optional = true }
rand = { version = "0.8", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
dotenvy = { version = "0.15", optional = true }
utoipa = { version = "5", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "9", features = ["axum"], optional = true }

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["server"]

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"
required-features = ["server"]
